syntax = "proto3";

package user;

option go_package = "github.com/tuusuario/user-service/src/api/proto";

service UserService {
    rpc CreateUser(UserRequest) returns (UserResponse);
    rpc GetUser(UserIDRequest) returns (UserResponse);
    rpc UpdateUser(UserRequest) returns (UserResponse);
    rpc DeleteUser(UserIDRequest) returns (DeleteResponse);
}

message UserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserIDRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message DeleteResponse {
    string status = 1;
}